src/test/test-models/bad/validate_set_double_locscale_bad1.stan
parameters {
  vector[3] vvv;
  real<location=vvv> a;
  real y;
}

model {
  y ~ normal(0,1);
}
